[package]
name = "midjourney-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
color-eyre = "0.6.2"
futures = "0.3.28"
indicatif = "0.17.6"
reqwest = "0.11.20"
reqwest-middleware = "0.2.3"
reqwest-retry = "0.2.2"
reqwest-tracing = "0.4.6"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "fs", "parking_lot"] }
tokio-stream = { version = "0.1.14", features = ["fs", "io-util"] }
tracing = "0.1.37"
tracing-appender = { version = "0.2.2", features = ["parking_lot"] }
tracing-subscriber = "0.3.17"
